<resources>
    <string name="app_name">Sechat NG</string>
    <string name="title_profile">Profile</string>
    <string name="action_settings">Settings</string>
    <string name="activity_add_contact">Add contact</string>
    <string name="add_contact_hint">Contact name</string>
    <string name="add_contact_scan_qr">Scan QR</string>
    <string name="fragment_contact_open_chat">Open chat</string>
    <string name="fragment_contact_verify">Verify</string>
    <string name="fragment_contact_copy_link">Copy profile link</string>
    <string name="fragment_contact_block">Block</string>
    <string name="fragment_contact_unblock">Unblock</string>
    <string name="activity_contact">Contact details</string>
    <string name="chat_message_hint">Message</string>
    <string name="stop">Stop</string>
    <string name="send">Send</string>
    <string name="activity_qr_code_scanner">Scan QR Code</string>
    <string name="activity_registration_welcome">Welcome to client02!</string>
    <string name="activity_registration_username">User name</string>
    <string name="activity_registration_device_name">Device name (optional)</string>
    <string name="activity_registration_register">Register</string>
    <string name="activity_login_password">Password</string>
    <string name="activity_login_login">Login</string>
    <string name="activity_login_error">Incorrect password</string>
    <string name="fragment_chat_is_typing">%s is typing…</string>
    <string name="message_status_sent" translatable="false">S</string>
    <string name="message_status_delivered" translatable="false">D</string>
    <string name="message_status_read" translatable="false">R</string>
    <string name="fragment_chat_user_status_online">Online</string>
    <string name="fragment_chat_burn_mode_1">30 sec</string>
    <string name="fragment_chat_burn_mode_2">1 min</string>
    <string name="fragment_chat_burn_mode_3">5 min</string>
    <string name="fragment_chat_burn_mode_4">1 hour</string>
    <string name="fragment_chat_burn_mode_5">1 day</string>
    <string name="fragment_chat_burn_mode_6">1 week</string>
    <string name="fragment_chat_send_media">Media</string>
    <string name="message_audio_play">Play</string>
    <string name="message_audio_stop">Stop</string>
    <string name="message_file_receiving">Receiving file…</string>
    <string name="qr_code">QR code</string>
    <string name="default_device_name">Device 1</string>
    <string name="activity_image_view">View image</string>
    <string name="menu_chat_send_image">Choose picture</string>
    <string name="menu_chat_send_video">Choose video</string>
    <string name="fragment_in_call">In Call</string>
    <string name="fragment_in_call_end_call">End call</string>
    <string name="record">Record</string>
    <string name="audio_recorder_status_text">Recording:</string>
    <string name="message_description_ping">Attention request</string>
    <string name="message_description_location">Location</string>
    <string name="message_description_contact">Contact</string>
    <string name="message_description_image">Image</string>
    <string name="message_description_video">Video message</string>
    <string name="message_description_audio">Audio message</string>
    <string name="message_description_file">File</string>
    <string name="fragment_profile_change_status">Change status</string>
    <string name="fragment_profile_change_profile_picture">Change profile picture</string>
    <string name="fragment_profile_copy_profile_link">Copy profile link</string>
    <string name="fragment_profile_verify_phone_number">Verify phone number</string>
    <string name="activity_incoming_call_accept_call">Accept</string>
    <string name="activity_incoming_call_decline_call">Decline</string>
    <string name="call_status_unknown">Ringing</string>
    <string name="call_status_accepted">Accepted</string>
    <string name="call_status_declined">Declined</string>
    <string name="call_status_hung_up">Hung up</string>
    <string name="notification_new">New</string>
    <string name="notification_ping">ping</string>
    <string name="notification_message">message</string>
    <string name="notification_from">from</string>
    <string name="notification_in">in</string>
    <string name="fragment_contact_never_seen">Never seen.</string>
    <string name="fragment_contact_no_status">No status yet.</string>
    <string name="fragment_contact_no_alias">No alias</string>
    <string name="fragment_chat_last_seen">Last seen</string>
    <string name="activity_incoming_call">Incoming Call</string>
    <string name="menu_navigation_start_conference_call">Conference Call</string>
    <string name="activity_group_chat_creation_name_hint">Group chat name</string>
    <string name="activity_group_chat_creation">Creating a group chat</string>
    <string name="activity_change_status_status_hint">New status</string>
    <string name="activity_change_status">Change status</string>
    <string name="activity_change_alias_alias_hint">New alias</string>
    <string name="activity_change_alias">Create/change alias</string>
    <string name="activity_change_alias_clear_alias">Clear</string>
    <string name="fragment_profile_no_status">No status set yet</string>
    <string name="activity_contact_selection">Choose contacts</string>
    <string name="menu_delete">Delete</string>
    <string name="ping_message">Attention request</string>
    <string name="fragment_chat_choose_messages">Pick messages</string>
    <string name="fragment_chat_no_maps_app">Please install a maps app to view locations</string>
    <string name="menu_chat_take_image">Take image</string>
    <string name="menu_chat_take_video">Take video</string>
    <string name="menu_chat_send_ping">Request attention</string>
    <string name="menu_chat_send_location">Send location</string>
    <string name="menu_chat_show_contact">Show contact</string>
    <string name="menu_chat_delete_chat">Delete chat</string>
    <string name="fragment_chat_no_location">Location data not available</string>
    <string name="menu_chat_context_recall">Recall</string>
    <string name="message_status_recalling">Recalling</string>
    <string name="message_status_recalled">Recalled</string>
    <string name="message_status_recall_failed">Recall failed</string>
    <string name="menu_chat_send_contact">Send contact</string>
    <string name="fragment_recent_call_list_empty">No recent calls</string>
    <string name="title_recent_calls">Recent Calls</string>
    <string name="screenshot_taken">Screenshot taken</string>
    <string name="notification_access_prompt">Allow access to notifications?</string>
    <string name="preferences_chat">In Chat</string>
    <string name="preferences_background_picture">Set a background picture</string>
    <string name="preferences_background_picture_clear">Remove the background picture</string>
    <string name="preferences_invisible_mode">Invisible mode</string>
    <string name="preferences_send_in_chat">Send ‘in chat’ status</string>
    <string name="preferences_send_delivery_notifications">Send delivery notifications</string>
    <string name="preferences_send_read_notifications">Send reading notifications</string>
    <string name="call_status_caller">Caller</string>
    <string name="fragment_in_call_start_sending_video">Start sending video</string>
    <string name="fragment_in_call_stop_sending_video">Stop sending video</string>
    <string name="activity_group_chat_detail">Group chat members</string>
    <string name="menu_chat_show_group_members">Show contacts</string>
    <string name="activity_group_chat_detail_title">Members of %s</string>
    <string name="activity_phone_number_registration">Register a phone number</string>
    <string name="activity_phone_number_registration_info">Enter your phone number, including the country code (e.g., +1 or +49). An SMS with a verification code will be sent to it.</string>
    <string name="activity_phone_number_registration_phone_number">Phone number</string>
    <string name="activity_phone_number_registration_register">Register phone number</string>
    <string name="activity_phone_number_verification_info">To complete the registration of the phone number, enter the code that was sent in the SMS.</string>
    <string name="activity_phone_number_verification_code">Verification code</string>
    <string name="activity_phone_number_verification_verify">Verify</string>
    <string name="activity_phone_number_verification">Enter verification code</string>
    <string name="activity_phone_number_verification_error">Invalid verification code</string>
    <string name="activity_phone_number_registration_enter_code">I have already received a verification code</string>
    <string name="activity_phone_number_verification_success">Your phone number has been successfully verified</string>
    <string name="menu_chat_context_forward">Forward</string>
    <string name="activity_chat_selection">Choose chats</string>
    <string name="activity_add_contact_key_data_mismatch">Key data from the server did not match the QR code</string>
    <string name="fragment_chat_burn_mode_off">Off</string>
    <string name="fragment_contact_open_secret_chat">Open secret chat</string>
    <string name="activity_image_sender_edit">Edit</string>
    <string name="activity_image_sender_send">Send</string>
    <string name="activity_image_sender">Sending image</string>
    <string name="activity_image_editor">Edit image</string>
    <string name="menu_image_editor_discard">Discard</string>
    <string name="menu_image_editor_undo">Undo</string>
    <string name="activity_image_editor_text_prompt">Enter text</string>
    <string name="activity_image_editor_text_prompt_hint">Text</string>
    <string name="menu_image_editor_text">Text</string>
    <string name="dialog_image_editor_options_brush_size">Brush size</string>
    <string name="dialog_image_editor_options_text_size">Text size</string>
    <string name="menu_image_editor_options">Options</string>
    <string name="activity_navigation_drawer_open">Open navigation drawer</string>
    <string name="activity_navigation_drawer_close">Close navigation drawer</string>
    <string name="activity_navigation_groups_header">Private groups</string>
    <string name="activity_navigation_groups_header_add">Create group</string>
    <string name="activity_navigation_contacts_header_add">Add contact</string>
    <string name="activity_navigation_contacts_header">People</string>
    <string name="contact_list_online_status">●</string>
    <string name="fragment_chat_delete_prompt">Confirm deletion</string>
    <string name="fragment_chat_delete_prompt_body">Really delete this chat? This action cannot be undone.</string>
    <string name="activity_navigation_unread_header">Unread</string>
    <string name="fragment_contact_verification_failed">Verification failed</string>
    <string name="fragment_contact_verification_failed_body">The provided contact information is not valid</string>
    <string name="verification_level_verified">Verified</string>
    <string name="verification_level_not_verified">Not verified</string>
    <string name="activity_navigation_search_hint">Search</string>
    <string name="fragment_contact_message">Message</string>
    <string name="fragment_contact_call">Call</string>
    <string name="fragment_contact_conference_call">Conference call…</string>
    <string name="fragment_contact_photos">Photos</string>
    <string name="fragment_contact_documents">Documents</string>
    <string name="fragment_contact_message_conversation">Message conversation</string>
    <string name="fragment_contact_block_user">Block user</string>
    <string name="fragment_contact_send_contact">Send contact</string>
    <string name="channel_description">Description</string>
    <string name="channel_name">Name</string>
    <string name="activity_channel_creation_create_channel">Create channel</string>
</resources>