<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:showDividers="middle"
    android:divider="?android:attr/dividerHorizontal">

    <Button
        android:id="@+id/activity_navigation_conference_call_button"
        android:text="@string/menu_navigation_start_conference_call"
        style="@style/activity_navigation_button"/>

    <Button
        android:id="@+id/activity_navigation_recent_calls_button"
        android:text="@string/title_recent_calls"
        style="@style/activity_navigation_button"/>

    <Button
        android:id="@+id/activity_navigation_settings_button"
        android:text="@string/action_settings"
        style="@style/activity_navigation_button"/>

</LinearLayout>