<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_chat_context_copy"
        android:title="@android:string/copy"
        android:icon="@drawable/ic_content_copy_white_24dp"
        android:showAsAction="ifRoom"/>

    <item
        android:id="@+id/menu_chat_context_delete"
        android:title="@string/menu_delete"
        android:icon="@drawable/ic_delete_white_24dp"
        android:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_chat_context_forward"
        android:title="@string/menu_chat_context_forward"
        android:icon="@drawable/ic_forward_white_24dp"
        android:showAsAction="ifRoom"/>

    <item
        android:id="@+id/menu_chat_context_recall"
        android:title="@string/menu_chat_context_recall"
        android:showAsAction="ifRoom"/>
</menu>