<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <EditText
        android:id="@+id/activity_channel_creation_name"
        android:hint="@string/channel_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/activity_channel_creation_description"
        android:hint="@string/channel_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/activity_channel_creation_create"
        android:text="@string/activity_channel_creation_create_channel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</LinearLayout>