<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="vertical">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:orientation="vertical"
            android:padding="16dp"
            android:gravity="center_horizontal">


        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/fragment_profile_circular_avatar"
            android:layout_width="100pt"
            android:layout_height="100pt"
            app:border_width="0dp" />

        <TextView
                android:id="@+id/fragment_profile_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                style="?android:textAppearanceLarge"/>

        <TextView
            android:id="@+id/fragment_profile_device_name"
            android:enabled="false"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/fragment_profile_status_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fragment_profile_no_status"/>

        <Button
            android:id="@+id/fragment_profile_change_status"
            android:text="@string/fragment_profile_change_status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/fragment_profile_change_profile_picture"
            android:text="@string/fragment_profile_change_profile_picture"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/fragment_profile_copy_profile_picture"
            android:text="@string/fragment_profile_copy_profile_link"
            android:enabled="false"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/fragment_profile_verify_phone_number"
            android:text="@string/fragment_profile_verify_phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <ImageView
            android:id="@+id/fragment_profile_qr_code"
            android:contentDescription="@string/qr_code"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            android:layout_margin="16dp"
            android:layout_width="240dp"
            android:layout_height="240dp"/>
    </LinearLayout>
</ScrollView>