<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="?android:attr/textAppearanceMedium"
        android:text="@string/activity_phone_number_verification_info"/>

    <EditText
        android:id="@+id/activity_phone_number_verification_code"
        android:hint="@string/activity_phone_number_verification_code"
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        tools:ignore="TextFields" />

    <Button
        android:id="@+id/activity_phone_number_verification_verify"
        android:layout_marginTop="8dp"
        android:layout_gravity="center"
        android:text="@string/activity_phone_number_verification_verify"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/activity_phone_number_verification_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:textAppearance="?android:textAppearanceMedium"
        android:textColor="@android:color/holo_red_dark"
        android:layout_gravity="center"
        android:visibility="gone"
        android:text="@string/activity_phone_number_verification_error"/>

</LinearLayout>