<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:gravity="center_horizontal"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
              android:paddingBottom="@dimen/activity_vertical_margin"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/activity_registration_welcome"
            style="?android:textAppearanceLarge"/>

    <EditText
            android:id="@+id/activity_login_password"
            android:hint="@string/activity_login_password"
            android:layout_marginBottom="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:imeActionLabel="@string/activity_login_login"
            android:imeActionId="0"/>

    <Button
            android:id="@+id/activity_login_login"
            android:text="@string/activity_login_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
        android:background="@color/sechat_blue"
        android:textColor="#ffffffff" />

    <TextView
            android:id="@+id/activity_login_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="@android:color/holo_red_dark"
            android:visibility="gone"
            android:text="@string/activity_login_error"/>
</LinearLayout>