<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:gravity="center_horizontal"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
              android:paddingBottom="0dp"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/activity_registration_welcome"
            style="?android:textAppearanceLarge"/>

    <EditText
            android:id="@+id/activity_registration_username"
            android:hint="@string/activity_registration_username"
            android:inputType="textNoSuggestions"
            android:layout_marginBottom="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    <EditText
            android:id="@+id/activity_registration_device_name"
            android:hint="@string/activity_registration_device_name"
            android:inputType="textNoSuggestions"
            android:layout_marginBottom="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    <Button
            android:id="@+id/activity_registration_register"
            android:text="@string/activity_registration_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    <TextView
            android:id="@+id/activity_registration_error"
            android:visibility="gone"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="@android:color/holo_red_dark"
            android:layout_margin="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

</LinearLayout>