<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android">
    <net.stacksmashing.sechat.BurnModeView
        android:id="@+id/burnMode"
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:orientation="horizontal"
        android:background="@drawable/burn_mode_background"
        android:layout_margin="4dp"
        android:checkedButton="@+id/burn_mode_3">

        <RadioButton
            android:id="@+id/burn_mode_1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/fragment_chat_burn_mode_1"
            android:button="@null"
            android:gravity="center"
            android:background="@drawable/bg_burn_mode_radio_button"
            android:textColor="@drawable/burn_mode_text_color"
            android:textSize="@dimen/burn_mode_text_size"/>

        <View
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:background="@color/sechat_red" />

        <RadioButton
            android:id="@+id/burn_mode_2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/fragment_chat_burn_mode_2"
            android:button="@null"
            android:gravity="center"
            android:background="@drawable/bg_burn_mode_radio_button"
            android:textColor="@drawable/burn_mode_text_color"
            android:textSize="@dimen/burn_mode_text_size"/>

        <View
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:background="@color/sechat_red" />

        <RadioButton
            android:id="@+id/burn_mode_3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/fragment_chat_burn_mode_3"
            android:button="@null"
            android:gravity="center"
            android:background="@drawable/bg_burn_mode_radio_button"
            android:textColor="@drawable/burn_mode_text_color"
            android:textSize="@dimen/burn_mode_text_size"/>

        <View
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:background="@color/sechat_red" />

        <RadioButton
            android:id="@+id/burn_mode_4"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/fragment_chat_burn_mode_4"
            android:button="@null"
            android:gravity="center"
            android:background="@drawable/bg_burn_mode_radio_button"
            android:textColor="@drawable/burn_mode_text_color"
            android:textSize="@dimen/burn_mode_text_size"/>

        <View
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:background="@color/sechat_red" />

        <RadioButton
            android:id="@+id/burn_mode_5"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/fragment_chat_burn_mode_5"
            android:button="@null"
            android:gravity="center"
            android:background="@drawable/bg_burn_mode_radio_button"
            android:textColor="@drawable/burn_mode_text_color"
            android:textSize="@dimen/burn_mode_text_size"/>

        <View
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:background="@color/sechat_red" />

        <RadioButton
            android:id="@+id/burn_mode_6"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/fragment_chat_burn_mode_6"
            android:button="@null"
            android:gravity="center"
            android:background="@drawable/bg_burn_mode_radio_button"
            android:textColor="@drawable/burn_mode_text_color"
            android:textSize="@dimen/burn_mode_text_size"/>

        <View
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:background="@color/sechat_red" />

        <RadioButton
            android:id="@+id/burn_mode_off"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/fragment_chat_burn_mode_off"
            android:button="@null"
            android:gravity="center"
            android:background="@drawable/bg_burn_mode_radio_button"
            android:textColor="@drawable/burn_mode_text_color"
            android:textSize="@dimen/burn_mode_text_size"/>
    </net.stacksmashing.sechat.BurnModeView>
</merge>